@@ -14,6 +14,7 @@
 package io.trino.plugin.deltalake;
 
 import com.google.common.collect.ContiguousSet;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 import io.trino.plugin.hive.containers.HiveMinioDataLake;
 import io.trino.spi.QueryId;
@@ -26,13 +27,12 @@ import org.testng.annotations.Test;
 import org.testng.asserts.SoftAssert;
 
 import java.nio.file.Path;
-import java.util.Map;
 import java.util.OptionalLong;
 import java.util.Set;
 
 import static io.trino.plugin.deltalake.DeltaLakeQueryRunner.DELTA_CATALOG;
 import static io.trino.plugin.deltalake.DeltaLakeQueryRunner.createS3DeltaLakeQueryRunner;
-import static io.trino.testing.sql.TestTable.randomTableSuffix;
+import static io.trino.testing.TestingNames.randomNameSuffix;
 import static java.lang.String.format;
 import static org.testng.Assert.assertEquals;
 
@@ -47,8 +47,7 @@ public class TestPredicatePushdown
      * This single-file Parquet table has known row groups. See the test
      * resource {@code pushdown/custkey_15rowgroups/README.md} for details.
      */
-    private final TableResource testTable =
-            new TableResource("custkey_15rowgroups", "custkey bigint, mktsegment varchar, phone varchar");
+    private final TableResource testTable = new TableResource("custkey_15rowgroups");
 
     private HiveMinioDataLake hiveMinioDataLake;
 
@@ -61,15 +60,17 @@ public class TestPredicatePushdown
         return createS3DeltaLakeQueryRunner(
                 DELTA_CATALOG,
                 TEST_SCHEMA,
-                Map.of("delta.enable-non-concurrent-writes", "true"),
-                hiveMinioDataLake.getMinioAddress(),
+                ImmutableMap.of(
+                        "delta.enable-non-concurrent-writes", "true",
+                        "delta.register-table-procedure.enabled", "true"),
+                hiveMinioDataLake.getMinio().getMinioAddress(),
                 hiveMinioDataLake.getHiveHadoop());
     }
 
     @Test
     public void testSelectPushdown()
     {
-        String table = testTable.create("select_pushdown");
+        String table = testTable.register("select_pushdown");
 
         assertPushdown(
                 format("SELECT custkey FROM %s WHERE custkey > 1495", table),
@@ -88,7 +89,7 @@ public class TestPredicatePushdown
     {
         String table;
 
-        table = testTable.create("delete_pushdown");
+        table = testTable.register("delete_pushdown");
         // Only 5 row groups have data above 1300, so pushdown to Parquet
         // should ensure only 500 rows are read.
         assertPushdownUpdate(
@@ -100,7 +101,7 @@ public class TestPredicatePushdown
                 execute(format("SELECT custkey FROM %s", table)).getOnlyColumnAsSet(),
                 ContiguousSet.closed(1L, 1300L));
 
-        table = testTable.create("delete_pushdown_disjoint");
+        table = testTable.register("delete_pushdown_disjoint");
         // 11 groups have data outside of (500, 1100]
         assertPushdownUpdate(
                 format("DELETE FROM %s WHERE custkey <= 500 OR custkey > 1100", table),
@@ -116,7 +117,7 @@ public class TestPredicatePushdown
     {
         String table;
 
-        table = testTable.create("update_pushdown_simple");
+        table = testTable.register("update_pushdown_simple");
         // 7 row groups include 500 in their range
         assertPushdownUpdate(
                 format("UPDATE %s SET phone = 'phone number' WHERE custkey = 500", table),
@@ -124,7 +125,7 @@ public class TestPredicatePushdown
                 700);
         assertQuery(format("SELECT phone FROM %s WHERE custkey = 500", table), "VALUES 'phone number'");
 
-        table = testTable.create("update_pushdown_range");
+        table = testTable.register("update_pushdown_range");
         // 9 groups have data on (1000, 1200]
         assertPushdownUpdate(
                 format("UPDATE %s SET mktsegment = phone WHERE 1000 < custkey AND custkey <= 1200", table),
@@ -137,8 +138,9 @@ public class TestPredicatePushdown
 
     /**
      * Assert on the number of rows read and updated by a read operation
+     *
      * @param actual The query to test
-     * @param expected The expected results as a SQL expression
+     * @param expected The expected results as an SQL expression
      * @param countProcessed The number of rows expected to be processed
      */
     private void assertPushdown(String actual, String expected, long countProcessed)
@@ -170,6 +172,7 @@ public class TestPredicatePushdown
 
     /**
      * Assert on the number of rows read and updated by a write operation.
+     *
      * @param sql The query to test
      * @param count The number of rows expected to be modified (query result)
      * @param countProcessed The number of rows expected to be processed
@@ -211,27 +214,25 @@ public class TestPredicatePushdown
     private class TableResource
     {
         private final String resourcePath;
-        private final String tableDefinition;
 
-        private TableResource(String resourcePath, String tableDefinition)
+        private TableResource(String resourcePath)
         {
             this.resourcePath = resourcePath;
-            this.tableDefinition = tableDefinition;
         }
 
         /**
-         * Create a table using the described resource and the given name prefix.
-         * @return The name of the created table.
+         * Register a table in the metastore using the described resource and the given name prefix.
+         *
+         * @return The name of the registered table.
          */
-        String create(String namePrefix)
+        String register(String namePrefix)
         {
-            String name = format("%s_%s", namePrefix, randomTableSuffix());
+            String name = format("%s_%s", namePrefix, randomNameSuffix());
             hiveMinioDataLake.copyResources(RESOURCE_PATH.resolve(resourcePath).toString(), name);
             getQueryRunner().execute(format(
-                    "CREATE TABLE %2$s (%3$s) WITH (location = 's3://%1$s/%2$s')",
+                    "CALL system.register_table(CURRENT_SCHEMA, '%2$s', 's3://%1$s/%2$s')",
                     BUCKET_NAME,
-                    name,
-                    tableDefinition));
+                    name));
             return name;
         }
     }
